solution/lab16/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    app: web-server
  ports:
  - port: 80
    targetPort: 80
