solution/lab16/policy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-web-server
spec:
  podSelector:
    matchLabels:
      app: web-server 
  policyTypes:
  - Ingress
  # Leaving ingress empty means "Deny All"
